--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   
   <!-- stylesheets -->
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
 
   <!-- scripts -->
-  <script src="https://kit.fontawesome.com/bf5b084248.js" crossorigin="anonymous"></script>
   <script src="scripts/piece.js"></script>
   <script src="scripts/tools.js"></script>
   <script src="scripts/moves.js"></script>
@@ -147,6 +147,26 @@
       <!-- to be added with script -->
     </div>
 
+  </div>
+
+  <div id="pawn-promo" class="hidden">
+    <div id="promo-box" class="white">
+      <i class="fas fa-chess-pawn"></i>
+      <svg viewBox="0 0 630 85" fill="#D7D259" xmlns="http://www.w3.org/2000/svg">
+        <path d="M9.5 46V30H620.5V46H9.5Z" fill="#D7D259"/>
+        <path d="M10 45.5H20V65.5H30L15 85L0 65.5H10V45.5Z" fill="#D7D259"/>
+        <path d="M210 45.5H220V65.5H230L215 85L200 65.5H210V45.5Z" fill="#D7D259"/>
+        <path d="M410 45.5H420V65.5H430L415 85L400 65.5H410V45.5Z" fill="#D7D259"/>
+        <path d="M610 45H620V65H630L615 84.5L600 65H610V45Z" fill="#D7D259"/>
+        <rect x="310" width="10" height="30" fill="#D7D259"/>
+      </svg>
+      <div class="promotions">
+        <div onclick="promote('rook')" class="silver"><i class="fas fa-chess-rook"></i></div>
+        <div onclick="promote('knight')" class="silver"><i class="fas fa-chess-knight"></i></div>
+        <div onclick="promote('bishop')" class="silver"><i class="fas fa-chess-bishop"></i></div>
+        <div onclick="promote('queen')" class="silver"><i class="fas fa-chess-queen"></i></div>
+      </div>
+    </div>
   </div>
 
   <script src="scripts/script.js"></script>
