fixed some bugs

--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
         <rect x="310" width="10" height="30" fill="#D7D259"/>
       </svg>
       <div class="promotions">
-        <div onclick="promote('rook')" class="silver"><i class="fas fa-chess-rook"></i></div>
-        <div onclick="promote('knight')" class="silver"><i class="fas fa-chess-knight"></i></div>
-        <div onclick="promote('bishop')" class="silver"><i class="fas fa-chess-bishop"></i></div>
-        <div onclick="promote('queen')" class="silver"><i class="fas fa-chess-queen"></i></div>
+        <div onclick="promote('rook')"><i class="fas fa-chess-rook"></i></div>
+        <div onclick="promote('knight')"><i class="fas fa-chess-knight"></i></div>
+        <div onclick="promote('bishop')"><i class="fas fa-chess-bishop"></i></div>
+        <div onclick="promote('queen')"><i class="fas fa-chess-queen"></i></div>
       </div>
     </div>
   </div>
